Zminilem our feature na nasze funkcje

--- a/app/index.html
+++ b/app/index.html
@@ -115,8 +115,8 @@
   <div id="features" class="page-section page-section--blue">
     <div class="wrapper">
 
-      <h2 class="section-title"><img src="assets/images/icons/star.svg" class="section-title__icon">Our
-        <strong>Features</strong></h2>
+      <h2 class="section-title"><img src="assets/images/icons/star.svg" class="section-title__icon"> Nasze
+        <strong>Funkcje</strong></h2>
       <div class="row row--gutters-large generic-content-container">
         <div class="row__medium-6">
           <div class="feature-item">
